# jeteja_robot

./: .gitignore  README.md  imu_data.csv  path.py  requirements.txt  rsync.bash
data/: convert.py  extract.py  optimize.py  preprocess.py  signatures.py  test.py  train.py
docs/: mkdocs.yml
docs/docs/: TOC.md
docs/site/: 404.html  index.html  search.html  sitemap.xml
docs/site/getting_started/: index.html
docs/site/search/: search_index.json
new_scripts/: 3d_mapping.py  downsampling.py  gui_test.py  inspect_ply.py  visualize_map.py
preprocessing/: extract_bags.py
scripts/: autopilot.py  collect_data.py  collect_data_rgb.py  collect_data_rgbd.py  config.json  config_new.json  convnets.py  exp_collect_data.py  hardware.py  onnx_to_trt.py  tensor_autopilot.py  tensor_train.py  test_autopilot.py  test_collect_data.py  test_config.json  test_hardware.py  test_onnx_to_trt.py  test_trt_auto.py  train_test.py
scripts/unit_test/: joystick_drivetrain.py  rs_color.py  rs_rgb.py  test_dcamera.py
share/realsense2_camera/: rs_launch.py
src/data_processing/: package.xml  setup.py
src/data_processing/config/: topics.yaml
src/data_processing/data_processing/: extract_bags.py  rosbag_manager.py
src/data_processing/launch/: collect_data_launch.py
src/jeteja_launch/: package.xml  setup.cfg  setup.py
src/jeteja_launch/config/: autopilot.yaml  joy.yaml  master_config.py  realsense2_camera.yaml  remote_control_handler.yaml  teleop_twist_joy.yaml
src/jeteja_launch/jeteja_launch/: autopilot_control_handler.py  autopilot_inference_handler.py  cmd_vel_fixed_rate.py  cmd_vel_to_pwm.py  image_to_processed_image.py  remote_control_handler.py
src/jeteja_launch/launch/: sensor_launch.py
src/jeteja_launch/scripts/: image_processing.py  lower_control.py  model_inference_handler.py  pico_handler.py  postprocessing.py  preprocessing.py  run.py  test.py
src/jeteja_launch_msgs/: CMakeLists.txt  package.xml
src/jeteja_launch_msgs/msg/: PwmSignals.msg
src/jeteja_record/: package.xml  setup.cfg  setup.py
src/jeteja_record/config/: rosbag.yaml  topics.yaml
src/jeteja_record/jeteja_record/: rosbag_manager.py
src/jeteja_record/launch/: collect_data_launch.py
src/micro_controller_launch/: package.xml  setup.cfg  setup.py
src/micro_controller_launch/launch/: start_pico_launch.py
src/micro_controller_launch/pico/: pico_main.py
src/robot_launch/: package.xml  setup.py
src/robot_launch/config/: joy.yaml  realsense2_camera.yaml  remote_control_handler.yaml  teleop_twist_joy.yaml
src/robot_launch/launch/: sensor_launch.py
src/robot_launch/robot_launch/: remote_control_handler.py
src/robot_launch/scripts/: delete.py  export.py  find_pico_port.py  main.py  main_log.py  pico_handler.py  reset.py  rtc.py  test.py
training/: extract.py  path.py  preprocess.py  train.py
training/utils/: file_utilities.py
utils/: file_utilities.py  training_utilities.py
