<?xml version="1.0"?>
<package format="3">
  <name>jeteja_launch_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for the Jeteja launch system.</description>

  <maintainer email="ashtonmjohns@gmail.com">ucajetson</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- Indicate this package generates interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
